[tool.poetry]
name = "howdyho"
version = "2.0"
description = ""
authors = ["voronin9032 <voronin9032n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
