[tool.poetry]
name = "howdyho"
version = "3.0"
description = ""
authors = ["Voronin9032 <voronin9032n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
howdyho = "howdyho:while_true_print_howdyho_help"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
