[tool.poetry]
name = "howdyho"
version = "3.0.1"
readme = "README.md"
description = "Забавный скрипт, без остановки печатающий фразу \"Хаудихо помоги\"."
license = "MIT"
authors = ["Voronin9032 <voronin9032n3@gmail.com>"]
repository = "https://github.com/voronin9032/howdyho"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
howdyho = "howdyho:while_true_print_howdyho_help"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
